Fix incorrect spacing of filters in pet_list

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -14,6 +14,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.text-header {
+    font-family: 'Handlee', cursive;
+}
+
 .text-regular {
     font-family: 'Open Sans', sans-serif;
 }
